images updated|switch language|dialog gradient

--- a/app/src/main/res/layout-w720dp/fragment_prasang_detail.xml
+++ b/app/src/main/res/layout-w720dp/fragment_prasang_detail.xml
@@ -10,24 +10,28 @@
         android:id="@+id/imageslider"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintWidth_percent="0.5" />
 
-    <include layout="@layout/page_indicator"
-        android:layout_marginBottom="32dp"
+    <include
+        layout="@layout/page_indicator"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/imageslider"
-        app:layout_constraintStart_toStartOf="@id/imageslider"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="@id/imageslider" />
 
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imageslider"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499">
 
         <include layout="@layout/c_prasang_details_info" />
 
