--- a/app/src/main/res/layout/c_prasang_details_info.xml
+++ b/app/src/main/res/layout/c_prasang_details_info.xml
@@ -59,12 +59,14 @@
 
     <TextView
         android:id="@+id/des"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:text="des"
+        android:ellipsize="end"
         android:textColor="@color/quantum_black_100"
         android:textSize="20sp"
+        app:layout_constraintWidth_default="wrap"
         app:layout_constraintBaseline_toBaselineOf="@id/lbl_des"
         app:layout_constraintStart_toEndOf="@id/lbl_des" />
 
@@ -77,7 +79,7 @@
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/lbl_des"
-        app:layout_constraintTop_toBottomOf="@id/lbl_des" />
+        app:layout_constraintTop_toBottomOf="@id/des" />
 
     <TextView
         android:id="@+id/date"
