--- a/app/src/main/res/layout/c_prasang_details_info.xml
+++ b/app/src/main/res/layout/c_prasang_details_info.xml
@@ -61,13 +61,11 @@
         android:id="@+id/des"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:text="des"
-        android:ellipsize="end"
         android:textColor="@color/quantum_black_100"
         android:textSize="20sp"
-        app:layout_constraintWidth_default="wrap"
         app:layout_constraintBaseline_toBaselineOf="@id/lbl_des"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/lbl_des" />
 
     <TextView
