--- a/app/src/main/res/layout/c_prasang_overlay.xml
+++ b/app/src/main/res/layout/c_prasang_overlay.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="@dimen/prasang_overlay_width"
     android:layout_height="wrap_content"
@@ -6,7 +7,7 @@
     android:clickable="true"
     android:orientation="vertical">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/dialogimage"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -14,7 +15,11 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/logo" />
+        android:src="@drawable/logo"
+        app:riv_border_color="@color/colorPrimary"
+        app:riv_border_width="2dip"
+        app:riv_corner_radius="7dip"
+        app:riv_mutate_background="true" />
 
     <TextView
         android:id="@+id/title"
