--- a/app/src/main/res/layout/generic_toolbar.xml
+++ b/app/src/main/res/layout/generic_toolbar.xml
@@ -11,6 +11,7 @@
         android:src="@drawable/logo" />
 
     <TextView
+        android:id="@+id/toolbar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
