--- a/app/src/main/res/layout/c_prasang_details_info.xml
+++ b/app/src/main/res/layout/c_prasang_details_info.xml
@@ -17,6 +17,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/sutra"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sutra"
+        android:textColor="@color/quantum_black_100"
+        android:textSize="28sp"
+        app:layout_constraintEnd_toEndOf="@id/title"
+        app:layout_constraintStart_toStartOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
+    <TextView
         android:id="@+id/place"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,17 +35,7 @@
         android:textColor="@color/quantum_black_100"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
-
-    <TextView
-        android:id="@+id/des"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="des"
-        android:textColor="@color/quantum_black_100"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@id/place"
-        app:layout_constraintTop_toBottomOf="@id/place" />
+        app:layout_constraintTop_toBottomOf="@id/sutra" />
 
     <TextView
         android:id="@+id/date"
@@ -43,18 +44,23 @@
         android:text="date"
         android:textColor="@color/quantum_black_100"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@id/des"
-        app:layout_constraintTop_toBottomOf="@id/des" />
-
+        app:layout_constraintBaseline_toBaselineOf="@id/place"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/sutra"
-        android:layout_width="wrap_content"
+        android:id="@+id/des"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="sutra"
+        android:text="des"
         android:textColor="@color/quantum_black_100"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@id/date"
-        app:layout_constraintTop_toBottomOf="@id/date" />
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/place" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
