--- a/app/src/main/res/layout/page_indicator.xml
+++ b/app/src/main/res/layout/page_indicator.xml
@@ -4,5 +4,5 @@
     app:piDefaultColor="#999"
     app:piSelectedColor="@color/colorPrimary"
     app:piSize6="6dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_width="40dp"
+    android:layout_height="40dp" />
