--- a/app/src/main/res/layout-w720dp/fragment_prasang_detail.xml
+++ b/app/src/main/res/layout-w720dp/fragment_prasang_detail.xml
@@ -20,7 +20,7 @@
         layout="@layout/page_indicator"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/imageslider"
         app:layout_constraintStart_toStartOf="@id/imageslider" />
@@ -28,6 +28,8 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/mandalaborder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imageslider"
         app:layout_constraintTop_toTopOf="parent"
