--- a/app/src/main/res/layout/activity_prasang_details.xml
+++ b/app/src/main/res/layout/activity_prasang_details.xml
@@ -42,5 +42,13 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:src="@drawable/mahotsavlogo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="15dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
