--- a/app/src/main/res/layout-w720dp/fragment_prasang_detail.xml
+++ b/app/src/main/res/layout-w720dp/fragment_prasang_detail.xml
@@ -28,8 +28,8 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/mandalaborder"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imageslider"
         app:layout_constraintTop_toTopOf="parent"
