--- a/app/src/main/res/layout/generic_toolbar.xml
+++ b/app/src/main/res/layout/generic_toolbar.xml
@@ -1,12 +1,11 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:layout_alignParentTop="true"
+    android:layout_height="48dp"
     android:background="@color/toolbarColor">
 
     <ImageView
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
         android:layout_width="50dp"
         android:layout_height="55dp"
         android:src="@drawable/logo" />
@@ -15,7 +14,7 @@
         android:id="@+id/toolbar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
         android:text="Akshar Sparsh"
         android:textColor="#ffffff"
         android:textSize="28sp"
