--- a/app/src/main/res/layout-w720dp/fragment_prasang_detail.xml
+++ b/app/src/main/res/layout-w720dp/fragment_prasang_detail.xml
@@ -10,10 +10,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
+        app:layout_constraintVertical_bias="0.9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
+        app:layout_constraintWidth_percent="0.47" />
 
     <include
         layout="@layout/page_indicator"
