--- a/app/src/main/res/layout/prasang_img.xml
+++ b/app/src/main/res/layout/prasang_img.xml
@@ -4,15 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/img1"
-        android:layout_width="500dp"
-        android:layout_height="500dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerInside"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintHorizontal_bias="0.9"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/simple_border"
+        android:padding="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1.3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.95"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_margin="2dp"
+            android:id="@+id/img1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
