--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFB74D</color>
+    <color name="colorPrimary">#FFA500</color>
     <color name="colorPrimaryDark">#FFA726</color>
     <color name="colorAccent">#FFB74D</color>
     <!--<color name="colorPrimary">#A31519</color>
