--- a/app/src/main/res/layout/activity_prasang_details.xml
+++ b/app/src/main/res/layout/activity_prasang_details.xml
@@ -46,12 +46,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="15dp"
-        android:alpha="0.5"
-        android:src="@drawable/mahotsavlogo"
+        android:alpha="0.8"
+        android:src="@drawable/hpbu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintWidth_percent="0.1" />
+        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintWidth_percent="0.15" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
