--- a/app/src/main/res/layout/c_prasang_details_info.xml
+++ b/app/src/main/res/layout/c_prasang_details_info.xml
@@ -123,9 +123,9 @@
             android:id="@+id/web_des"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.76"
+            app:layout_constraintHeight_percent="0.60"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/info_panel"
             app:layout_constraintVertical_bias="0.5" />
