--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -82,8 +82,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="24dp"
         android:paddingHorizontal="16dp"
@@ -128,12 +128,12 @@
         android:layout_height="0dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="30dp"
-        android:alpha="0.6"
-        android:src="@drawable/mahotsavlogo"
+        android:alpha="0.9"
+        android:src="@drawable/hpbu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintWidth_percent="0.1" />
+        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintWidth_percent="0.15" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
