--- a/app/src/main/res/layout/grid_view_item_list.xml
+++ b/app/src/main/res/layout/grid_view_item_list.xml
@@ -23,9 +23,10 @@
             android:src="@drawable/locationpin" />
 
 <!--        <TextView-->
+<!--            android:id="@+id/textViewImage"-->
 <!--            android:layout_width="wrap_content"-->
 <!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="18sp"-->
+<!--            android:layout_marginTop="70dp"-->
 <!--            android:gravity="center"-->
 <!--            android:text="HERE"-->
 <!--            android:textColor="@color/black1"-->
